--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "kiroAgent.configureMCP": "Disabled",
-    "python.defaultInterpreterPath": "./venv/Scripts/python.exe"
+    "python.defaultInterpreterPath": "./venv/Scripts/python.exe",
+    "html.autoClosingTags": false
 }
