--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 SPOTIPY_CLIENT_ID=your_client_id_here
 SPOTIPY_CLIENT_SECRET=your_client_secret_here
 TRAVIS_SCOTT_URI=spotify:artist:0Y5tJX1MQlPlqiwlOH1tJY
+SECRET_FLASK_KEY=your_secret_flask_key_here  
